test-cases/negative/strict_end.lay
describe 'strict end test'
  test 't1'
    print 't1'
  end test
  
  end test # redundant, should fail
end describe
